Fixed decision component overflow

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -54,6 +54,7 @@
   width: 100%;
   border: 1px solid #e5aeff;
   box-sizing: border-box;
+  overflow:hidden;
 }
 
 .sidebar-right app-plot {
